test/expressions/vass/undefined-min-error.good
undefined-min-error.chpl:5: error: 'min(type t)' is not defined for t=R
