test/expressions/vass/undefined-min-error.chpl
// checks compile-time error when min(t) is not defined

record R { }

writeln(min(R));
